Fixing Font Size and Testimonial spacing

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 }
 
 body {
-	font-size: 24px;
+	font-size: 32px;
 	font-family: "Inter", sans-serif;
 }
 
